refactor(SysRoleServiceImpl): Clean up code formatting and improve dependency injection for PermissionCacheService